# MuRoGAI-Nav

./: .gitignore  LICENSE  cyclonedds_pc.xml  requirements.txt
burger_robot/: package.xml  setup.cfg  setup.py
burger_robot/burger_robot/: burger_llm.py  burger_publisher.py  burger_robot_llm.py  controller.py  controller1.py  controller10.py  controller11.py  controller12.py  controller13.py  controller3.py  controller4.py  controller5_holo.py  controller5_holo_pose.py  controller5_holo_pose1.py  controller5_holo_pose2.py  controller6_holo_time.py  controller7_diff_drive_pose.py  controller7_diff_drive_pose1.py  controller7_diff_drive_pose2.py  controller8_diff_drive_time.py  controller9.py  controller91.py  controller9_pub.py  controller9_pub1.py  fake_diff_drive_trajectory_publisher.py  fake_holo_trajectory_publisher.py  find_server.py  fleet_controller_node.py  goto_server.py  publisher.py  robot_test.py  robot_test1.py  tcp_trajectory_receiver.py
burger_robot/code_vel/: 10_103_a_outside_1.npy  202_v4.npy  202_v5.npy  heterogeneous_kinodynamic_formation_steering.py  individual_kinodynamic_steering.py  si_rrt_enhanced_individual_kinodynamic.py  test_heterogeneous_formations_infla_resta1_202_vel.py  test_heterogeneous_formations_infla_resta1_202_vel1.py  test_heterogeneous_formations_infla_resta1_202_vel_2F.py
burger_robot/data/: DD2.csv  DD_controls.csv  DiffDrive_controls.csv  HeteroForm_robot0_controls.csv  HeteroForm_robot1_controls.csv  HeteroForm_robot2_controls.csv  Holo1.csv  Holo_controls.csv  Holo_controls1.csv  chat_history.txt  robot_task_history.txt
burger_robot/launch/: test_robots.launch.py
burger_robot/trajectory_logs/: HeteroForm_robot1_holonomic.csv
burger_robot/trajectory_logs1/: DD1.csv  TB4.csv  TeamBurger_centroid.csv  TeamBurger_robot0_diff-drive copy.csv  TeamBurger_robot0_diff-drive.csv  TeamBurger_robot1_diff-drive.csv  TeamBurger_robot2_diff-drive.csv  Waffle.csv
burger_robot/trajectory_logs2/: DD1.csv  DD2.csv  HeteroForm_robot0_diff-drive.csv  HeteroForm_robot1_diff-drive.csv  HeteroForm_robot2_diff-drive.csv  individual_kinodynamic_steering.py  test_heterogeneous_formations_infla_resta1_202.py
burger_robot/trajectory_logs3/: DD2.csv  (+1 more)
chatty/: package.xml  setup.cfg  setup.py
cleaning_bot/: package.xml  setup.py
delivery_bot/: package.xml  setup.cfg  setup.py
drone/: package.xml  setup.py
go2_robot/: package.xml  setup.py
lerobot/: package.xml  setup.cfg  setup.py
navigation/navigation_manager_interface/: CMakeLists.txt  package.xml
navigation/navigation_manager_interface/msg/: CancelNavigationRequest.msg  NavigationRobotRequest.msg  RobotGoalStatus.msg  RobotPathArray.msg  StopRobotsRequest.msg
object_mover_interface/: CMakeLists.txt  package.xml
object_mover_interface/srv/: MoveObjects.srv
path_plan/path_planner_interface/: CMakeLists.txt  package.xml
path_plan/path_planner_interface/msg/: DiffDriveTrajectory.msg  HoloTrajectory.msg  PathPlannerRequest.msg  RobotCmd.msg  RobotFleetCmd.msg  RobotPath.msg  RobotPathArray.msg  RobotTrajectory.msg  RobotTrajectoryArray.msg
pick_object/: package.xml  setup.cfg  setup.py
pick_object_interface/: CMakeLists.txt  package.xml
pick_object_interface/srv/: StartPick.srv
robot_interface/: CMakeLists.txt  package.xml
robot_llm/: package.xml  setup.py
robots/multi_robot/: CMakeLists.txt  package.xml
robots/multi_robot/env/: ign_resource_path.dsv.in
robots/multi_robot/launch/: multi_robot.launch.py  multi_robot1.launch.py
robots/multi_robot/models/Birthday_cake/: model.sdf
robots/multi_robot/models/CoffeeTable/: model.sdf
robots/multi_robot/models/Coke/: model.sdf
robots/multi_robot/models/FemaleVisitorSit/: model.sdf
robots/multi_robot/models/JBL_Speaker/: model.sdf
robots/multi_robot/models/KitchenSink/: model.sdf
robots/multi_robot/models/MaleVisitorSit/: model.sdf
robots/multi_robot/models/PatientFSit/: model.sdf
robots/multi_robot/models/RetailKiosk1/: model.sdf
robots/multi_robot/models/SANDWICH_MEAL/: model.sdf
robots/multi_robot/models/STEAK_SET/: model.sdf
robots/multi_robot/models/Table/: model.sdf
robots/multi_robot/models/VisitorKidSit/: model.sdf
robots/multi_robot/models/WoodenChair/: model.sdf
robots/multi_robot/models/gift_box/: metadata.pbtxt  model.config  model.sdf
robots/multi_robot/models/pepsi1/: metadata.pbtxt  model.config  model.sdf
robots/multi_robot/models/pepsi2/: metadata.pbtxt  model.config  model.sdf
robots/multi_robot/models/pepsi4/: metadata.pbtxt  model.config  model.sdf
robots/multi_robot/models/stall_chicken/: model.config  model.sdf
robots/multi_robot/models/stall_drinks/: model.config  model.sdf
robots/multi_robot/models/stall_salad/: model.config  model.sdf
robots/multi_robot/rviz/: multi_robot.rviz
robots/multi_robot/worlds/: empty2.world  empty_world.world  food_court-1.sdf  food_court.sdf  food_court1.sdf  food_court2.sdf  food_court_5.sdf  food_court_complete.sdf  foodcourt_world.sdf  foodcourt_world_small.sdf
robots/x3_uav/x3_uav_ignition/: CMakeLists.txt  package.xml
robots/x3_uav/x3_uav_ignition/config/: ros_gz_bridge.yaml  ros_gz_bridge_X3.yaml  ros_gz_bridge_r1.yaml  ros_gz_bridge_r2.yaml  ros_gz_bridge_template.yaml
robots/x3_uav/x3_uav_ignition/launch/: ignition.launch.py  x3_uav_multi_robot.launch.py  x3_uav_robot.launch.py
robots/yahboom/yahboom_rosmaster_gazebo/: CMakeLists.txt  package.xml
robots/yahboom/yahboom_rosmaster_gazebo/config/: ros_gz_bridge.yaml  ros_gz_bridge_r1.yaml  ros_gz_bridge_r2.yaml  ros_gz_bridge_template.yaml
robots/yahboom/yahboom_rosmaster_gazebo/launch/: gazebo.launch.py  yahboom_multi_robot.launch.py  yahboom_robot.launch.py
robots/yahboom/yahboom_rosmaster_gazebo/rviz/: multi_robot.rviz
tb4_robot/: package.xml  setup.cfg  setup.py
trajectory_logs/: F1_robot1_diff-drive.csv  F1_robot2_diff-drive.csv
waffle_robot/: package.xml  setup.cfg  setup.py
(+1117 files in other folders)
