<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_object_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bhavishraib@gmail.com">suraj</maintainer>
  <license>TODO: License declaration</license>

  <depend>action_msgs</depend>                   <!-- ← "I need the basic action types that ROS 2 provides" -->

  <build_depend>rosidl_default_generators</build_depend>   <!--← "At build time, give me the tool that turns .action files into code" -->
  <exec_depend>rosidl_default_runtime</exec_depend>      <!--  ← "At run time, give me the libraries so the generated code works" -->

  <member_of_group>rosidl_interface_packages</member_of_group>  <!-- ← "Hey colcon! This package contains messages/actions → treat it specially" -->


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
