<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>x3_uav_ignition</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="name@gmail.com">name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>tf2_ros</depend>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>

  <depend>geometry_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>tf2_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
